Added DPD/LNHPD/NOC CSV downloads for EN/FR

--- a/APIDocumentation/noc-dataset-en.html
+++ b/APIDocumentation/noc-dataset-en.html
@@ -346,13 +346,7 @@
                                         <td>English</td>
                                         <td><a href="https://api.hres.ca/noc/api/brand/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
                                     </tr>
-                                    <tr>
-                                        <td>Brand</td>
-                                        <td>Dataset</td>
-                                        <td>JSON</td>
-                                        <td>French</td>
-                                        <td><a href="https://api.hres.ca/noc/api/brand/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
-                                    </tr>
+
                                     <tr>
                                         <td>Brand</td>
                                         <td>Dataset</td>
@@ -360,13 +354,15 @@
                                         <td>English</td>
                                         <td><a id="brandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/brand/?lang=en&type=xml', 'brandEN')">Access</a></td>
                                     </tr>
+
                                     <tr>
                                         <td>Brand</td>
                                         <td>Dataset</td>
-                                        <td>XML</td>
-                                        <td>French</td>
-                                        <td><a id="brandFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/brand/?lang=fr&type=xml', 'brandFR')">Access</a></td>
+                                        <td>CSV</td>
+                                        <td>English</td>
+                                        <td><a href="./api/CSV/DownloadCSV?dataType=brand&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
+
                                     <!--Brand Ends-->
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
@@ -378,13 +374,7 @@
                                         <td>English</td>
                                         <td><a href="https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
                                     </tr>
-                                    <tr>
-                                        <td>Notice of Compliance</td>
-                                        <td>Dataset</td>
-                                        <td>JSON</td>
-                                        <td>French</td>
-                                        <td><a href="https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
-                                    </tr>
+
                                     <tr>
                                         <td>Notice of Compliance</td>
                                         <td>Dataset</td>
@@ -392,13 +382,16 @@
                                         <td>English</td>
                                         <td><a id="noticeofcompliancemainEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=en&type=xml', 'noticeofcompliancemainEN')">Access</a></td>
                                     </tr>
+
+
                                     <tr>
                                         <td>Notice of Compliance</td>
                                         <td>Dataset</td>
-                                        <td>XML</td>
-                                        <td>French</td>
-                                        <td><a id="noticeofcompliancemainFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/noticeofcompliancemain/?lang=fr&type=xml', 'noticeofcompliancemainFR')">Access</a></td>
+                                        <td>CSV</td>
+                                        <td>English</td>
+                                        <td><a href="./api/CSV/DownloadCSV?dataType=nocci&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
+
                                     <!--NOC Main Ends-->
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
@@ -410,13 +403,7 @@
                                         <td>English</td>
                                         <td><a href="https://api.hres.ca/noc/api/product/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
                                     </tr>
-                                    <tr>
-                                        <td>Product</td>
-                                        <td>Dataset</td>
-                                        <td>JSON</td>
-                                        <td>French</td>
-                                        <td><a href="https://api.hres.ca/noc/api/product/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
-                                    </tr>
+
                                     <tr>
                                         <td>Product</td>
                                         <td>Dataset</td>
@@ -424,13 +411,15 @@
                                         <td>English</td>
                                         <td><a id="productEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/product/?lang=en&type=xml', 'productEN')">Access</a></td>
                                     </tr>
+
                                     <tr>
                                         <td>Product</td>
                                         <td>Dataset</td>
-                                        <td>XML</td>
-                                        <td>French</td>
-                                        <td><a id="productFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/product/?lang=fr&type=xml', 'productFR')">Access</a></td>
+                                        <td>CSV</td>
+                                        <td>English</td>
+                                        <td><a href="./api/CSV/DownloadCSV?dataType=product&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
+
                                     <!--Product Ends-->
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
@@ -442,13 +431,7 @@
                                         <td>English</td>
                                         <td><a href="https://api.hres.ca/noc/api/productform/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
                                     </tr>
-                                    <tr>
-                                        <td>Product Form</td>
-                                        <td>Dataset</td>
-                                        <td>JSON</td>
-                                        <td>French</td>
-                                        <td><a href="https://api.hres.ca/noc/api/productform/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
-                                    </tr>
+
                                     <tr>
                                         <td>Product Form</td>
                                         <td>Dataset</td>
@@ -456,13 +439,15 @@
                                         <td>English</td>
                                         <td><a id="productformEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productform/?lang=en&type=xml', 'productformEN')">Access</a></td>
                                     </tr>
+
                                     <tr>
                                         <td>Product Form</td>
                                         <td>Dataset</td>
-                                        <td>XML</td>
-                                        <td>French</td>
-                                        <td><a id="productformFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productform/?lang=fr&type=xml', 'productformFR')">Access</a></td>
+                                        <td>CSV</td>
+                                        <td>English</td>
+                                        <td><a href="./api/CSV/DownloadCSV?dataType=productForm&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
+
                                     <!--Product Form Ends-->
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
@@ -474,13 +459,7 @@
                                         <td>English</td>
                                         <td><a href="https://api.hres.ca/noc/api/productingredient/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
                                     </tr>
-                                    <tr>
-                                        <td>Product Ingredient</td>
-                                        <td>Dataset</td>
-                                        <td>JSON</td>
-                                        <td>French</td>
-                                        <td><a href="https://api.hres.ca/noc/api/productingredient/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
-                                    </tr>
+
                                     <tr>
                                         <td>Product Ingredient</td>
                                         <td>Dataset</td>
@@ -488,13 +467,15 @@
                                         <td>English</td>
                                         <td><a id="productingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productingredient/?lang=en&type=xml', 'productingredientEN')">Access</a></td>
                                     </tr>
+
                                     <tr>
                                         <td>Product Ingredient</td>
                                         <td>Dataset</td>
-                                        <td>XML</td>
-                                        <td>French</td>
-                                        <td><a id="productingredientFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productingredient/?lang=fr&type=xml', 'productingredientFR')">Access</a></td>
+                                        <td>CSV</td>
+                                        <td>English</td>
+                                        <td><a href="./api/CSV/DownloadCSV?dataType=productIngredient&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
+
                                     <!--Product Ingredient Ends-->
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
@@ -506,13 +487,7 @@
                                         <td>English</td>
                                         <td><a href="https://api.hres.ca/noc/api/productroute/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
                                     </tr>
-                                    <tr>
-                                        <td>Product Route</td>
-                                        <td>Dataset</td>
-                                        <td>JSON</td>
-                                        <td>French</td>
-                                        <td><a href="https://api.hres.ca/noc/api/productroute/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
-                                    </tr>
+
                                     <tr>
                                         <td>Product Route</td>
                                         <td>Dataset</td>
@@ -520,13 +495,15 @@
                                         <td>English</td>
                                         <td><a id="productrouteEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productroute/?lang=en&type=xml', 'productrouteEN')">Access</a></td>
                                     </tr>
+
                                     <tr>
                                         <td>Product Route</td>
                                         <td>Dataset</td>
-                                        <td>XML</td>
-                                        <td>French</td>
-                                        <td><a id="productrouteFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/productroute/?lang=en&type=xml', 'productrouteEN')">Access</a></td>
+                                        <td>CSV</td>
+                                        <td>English</td>
+                                        <td><a href="./api/CSV/DownloadCSV?dataType=productRoute&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
+
                                     <!--Product Route Ends-->
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
@@ -538,13 +515,7 @@
                                         <td>English</td>
                                         <td><a href="https://api.hres.ca/noc/api/vetspecies/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
                                     </tr>
-                                    <tr>
-                                        <td>Veterinary Species</td>
-                                        <td>Dataset</td>
-                                        <td>JSON</td>
-                                        <td>French</td>
-                                        <td><a href="https://api.hres.ca/noc/api/vetspecies/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
-                                    </tr>
+
                                     <tr>
                                         <td>Veterinary Species</td>
                                         <td>Dataset</td>
@@ -552,13 +523,15 @@
                                         <td>English</td>
                                         <td><a id="vetspeciesEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/vetspecies/?lang=en&type=xml', 'vetspeciesEN')">Access</a></td>
                                     </tr>
+
                                     <tr>
                                         <td>Veterinary Species</td>
                                         <td>Dataset</td>
-                                        <td>XML</td>
-                                        <td>French</td>
-                                        <td><a id="vetspeciesFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/noc/api/vetspecies/?lang=fr&type=xml', 'vetspeciesFR')">Access</a></td>
+                                        <td>CSV</td>
+                                        <td>English</td>
+                                        <td><a href="./api/CSV/DownloadCSV?dataType=vetSpecies&lang=en" class="resource-url-analytics btn btn-primary">Access</a></td>
                                     </tr>
+
                                     <!--Veterinary Species Ends-->
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
@@ -570,13 +543,7 @@
                                         <td>English</td>
                                         <td><a href="http://api.hres.ca/documentation/noc-documentation-en.html" title="Resource 3" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
                                     </tr>
-                                    <tr>
-                                        <td>Notice of Compliance API Documentation</td>
-                                        <td>Guide</td>
-                                        <td>HTML</td>
-                                        <td>French</td>
-                                        <td><a href="http://api.hres.ca/documentation/noc-documentation-fr.html" title="Resource 4" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
-                                    </tr>
+-
                                     <!--Link to Documentation Ends-->
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                 </table>
